# ir-support

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
ir_support_extra_parts/: README.md  pyproject.toml
ir_support_extra_parts/ir_support_extra_parts/: __init__.py
ir_support_extra_parts/ir_support_extra_parts/parts/: Apple.dae  BananaPeel.dae  BarTable.dae  BarcodeScanner.dae  BeerBottle.dae  BeerGlass.dae  BlueBin.dae  BottleCrate.dae  BottleSixPack.dae  BoxBin.dae  BuildPlateWorkbench.dae  Camera.dae  CandyJar.dae  CardboardBox.dae  CautionSign.dae  CerealBoxGreen.dae  ControlPanel.dae  DishRack.dae  DumplingTray.dae  FireAlarm.dae  FireBlanket.dae  FireExtinguisher.dae  FoodCan.dae  FoodTrayBlue.dae  GlassBottle.dae  GreenBin.dae  JuiceBoxOrange.dae  LegoMan.dae  LightTower.dae  Lunchbox.dae  MODEL_PROVENANCE.md  MagneticSwitch.dae  MilkCarton.dae  MilkCrate.dae  MilkPitcher.dae  Monitor.dae  MustardBottle.dae  OfficeDesk.dae  Pallet.dae  PintCup.dae  (+49 more)
ir_support_extra_robots/: README.md  pyproject.toml
ir_support_extra_robots/ir_support_extra_robots/: __init__.py
ir_support_extra_robots/ir_support_extra_robots/robots/: MODEL_PROVENANCE.md  __init__.py
ir_support_extra_robots/ir_support_extra_robots/robots/ABBCRB15000/: ABBCRB15000.py  ABBCRB15000Link0.dae  ABBCRB15000Link1.dae  ABBCRB15000Link2.dae  ABBCRB15000Link3.dae  ABBCRB15000Link4.dae  ABBCRB15000Link5.dae  ABBCRB15000Link6.dae  __init__.py
ir_support_extra_robots/ir_support_extra_robots/robots/ABBGoFa10/: ABBGoFa10.py  ABBGoFa10Link0.dae  ABBGoFa10Link1.dae  ABBGoFa10Link2.dae  ABBGoFa10Link3.dae  (+4 more)
ir_support_full/: README.md  pyproject.toml
ir_support_full/ir_support_full/: __init__.py
(+768 files in other folders)
